--- a/etl_retails.ipynb
+++ b/etl_retails.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fd6ba26c",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Saved transformed sales data to transformed_sales.csv\n",
-      "✅ Saved sales summary to sales_summary_by_store_year.csv\n"
+      " Saved transformed sales data to transformed_sales.csv\n",
+      " Saved sales summary to sales_summary_by_store_year.csv\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "\n",
     "# 1. Connect to your SQLite database\n",
-    "db_path = \"retail_sales.db\"  # make sure this matches your file name\n",
+    "db_path = \"retail_sales.db\"  \n",
     "conn = sqlite3.connect(db_path)\n",
     "\n",
     "# 2. Extract: Get all sales with dimension details\n",
@@ -40,10 +40,13 @@
     "\"\"\"\n",
     "sales_df = pd.read_sql_query(sales_query, conn)\n",
     "\n",
+    "#  Convert Date column to datetime\n",
+    "sales_df[\"Date\"] = pd.to_datetime(sales_df[\"Date\"], errors=\"coerce\")\n",
+    "\n",
     "# 3. Transform: Save detailed sales to CSV\n",
     "sales_csv_path = \"transformed_sales.csv\"\n",
     "sales_df.to_csv(sales_csv_path, index=False)\n",
-    "print(f\"✅ Saved transformed sales data to {sales_csv_path}\")\n",
+    "print(f\" Saved transformed sales data to {sales_csv_path}\")\n",
     "\n",
     "# 4. Transform: Create sales summary by Store & Year\n",
     "summary_query = \"\"\"\n",
@@ -59,13 +62,16 @@
     "\"\"\"\n",
     "summary_df = pd.read_sql_query(summary_query, conn)\n",
     "\n",
+    "#  No need for datetime conversion here because Year is already a string\n",
+    "\n",
     "# 5. Save summary to CSV\n",
     "summary_csv_path = \"sales_summary_by_store_year.csv\"\n",
     "summary_df.to_csv(summary_csv_path, index=False)\n",
-    "print(f\"✅ Saved sales summary to {summary_csv_path}\")\n",
+    "print(f\" Saved sales summary to {summary_csv_path}\")\n",
     "\n",
     "# Close connection\n",
     "conn.close()\n",
+    "\n",
     "\n"
    ]
   }
